Improved: tests configuration. Added: Quiz and Question tests.

--- a/src/ts/tests/index.html
+++ b/src/ts/tests/index.html
@@ -21,6 +21,8 @@
 
             });
 
+            quiz.addTextQuestion("something").withText("Something question!");
+
             quiz.start();
 
         </script>
