--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <script src="vendor/js/jasmine.js"></script>
         <script src="vendor/js/jasmine-jquery.js"></script>
         <!-- endbower -->
-        <script type="text/javascript" src="../../../build/js/lib/Quiz.js"></script>
+        <script type="text/javascript" src="build/js/lib/Quiz.js"></script>
         <script type="text/javascript" src="../../../build/js/lib/Question.js"></script>
         <script type="text/javascript" src="../../../build/js/lib/TextQuestion.js"></script>
         <script type="text/javascript">
