Fixed: When asking a new question the terminal is cleared.

--- a/src/ts/tests/index.html
+++ b/src/ts/tests/index.html
@@ -27,6 +27,7 @@
             quiz.initialize();
 
             quiz.addQuestion(new TerminalQuiz.TextQuestion("SampleQuestion").withTitle("A question?").asRequired());
+            quiz.addQuestion(new TerminalQuiz.TextQuestion("SampleQuestion2").withTitle("Another question?").asRequired());
 
             quiz.start();
 
