Renamed: QuestionAnswer to Answer. Started: distribution build task fix after tsconfig.json usage.

--- a/src/ts/tests/index.html
+++ b/src/ts/tests/index.html
@@ -25,7 +25,7 @@
         <script type="text/javascript" src="../../../build/js/lib/Quiz.js"></script>
         <script type="text/javascript" src="../../../build/js/lib/Question.js"></script>
         <script type="text/javascript" src="../../../build/js/lib/QuestionProcessor.js"></script>
-        <script type="text/javascript" src="../../../build/js/lib/QuestionAnswer.js"></script>
+        <script type="text/javascript" src="../../../build/js/lib/Answer.js"></script>
         <script type="text/javascript" src="../../../build/js/lib/TextQuestion.js"></script>
         <script type="text/javascript" src="../../../build/js/lib/ChoiceQuestion.js"></script>
         <script type="text/javascript">
