--- a/src/ts/tests/index.html
+++ b/src/ts/tests/index.html
@@ -47,11 +47,11 @@
 
             quiz.initialize();
 
-            quiz.addQuestion(new TerminalQuiz.ChoiceQuestion("Choice").withTitle("A question?").withOpts(["First Choice", "Second Choice"]).asRequired());
+            quiz.askChoice("Choice").withTitle("A question?").withOpts(["First Choice", "Second Choice"]).asRequired();
 
-            quiz.addQuestion(new TerminalQuiz.TextQuestion("RequiredText").withTitle("A required text question?").asRequired());
+            quiz.askText("RequiredText").withTitle("A required text question?").asRequired();
 
-            quiz.addQuestion(new TerminalQuiz.TextQuestion("TextWithPattern").withTitle("A non required text question with a pattern").withPattern(/\d\d\d/, "###"));
+            quiz.askText("TextWithPattern").withTitle("A non required text question with a pattern").withPattern(/\d\d\d/, "###");
 
             quiz.start();
 
