--- a/src/ts/tests/index.html
+++ b/src/ts/tests/index.html
@@ -14,6 +14,7 @@
     </head>
     <body>
         <div id="container" style="border: 1px solid; width:200px;height:200px;"></div>
+        <div id="container2" style="border: 1px solid; width:200px;height:200px;"></div>
         <!-- bower:js -->
         <script src="../../../bower_components/jquery/dist/jquery.js"></script>
         <script src="../../../bower_components/jquery.terminal/js/jquery.terminal-min.js"></script>
@@ -34,7 +35,7 @@
 
               typeMessageDelay: 50,
 
-              backgroundSoundUrl: "Background.wav",
+              backgroundSoundUrl: "",
 
               quizTypingSoundUrl: "Type.wav",
 
@@ -45,15 +46,39 @@
               userTypingSoundUrl: "Menu.wav"
             });
 
+            var quiz2 = new TerminalQuiz.Quiz($("#container2").get(0), {
+
+              typeMessageDelay: 50,
+
+              backgroundSoundUrl: "",
+
+              quizTypingSoundUrl: "Type.wav",
+
+              rightAnswerSoundUrl: "Right.wav",
+
+              wrongAnswerSoundUrl: "Wrong.wav",
+
+              userTypingSoundUrl: new Array("1.wav", "2.wav", "3.wav", "4.wav", "5.wav", "6.wav", "7.wav", "8.wav", "9.wav"),
+            });
+
             quiz.initialize();
 
             quiz.askText("RequiredText").withTitle("A required text question?").asRequired();
 
             quiz.askChoice("Choice").withTitle("A question?").withOpts(["First Choice", "Second Choice"]).asRequired();
-            
+
             quiz.askText("TextWithPattern").withTitle("A non required text question with a pattern").withPattern(/\d\d\d/, "###");
 
             quiz.start();
+            quiz2.initialize();
+
+            quiz2.askText("RequiredText").withTitle("A required text question?").asRequired();
+
+            quiz2.askChoice("Choice").withTitle("A question?").withOpts(["First Choice", "Second Choice"]).asRequired();
+
+            quiz2.askText("TextWithPattern").withTitle("A non required text question with a pattern").withPattern(/\d\d\d/, "###");
+
+            quiz2.start();
 
         </script>
     </body>
